--- a/concent_api/requirements.txt
+++ b/concent_api/requirements.txt
@@ -1,5 +1,5 @@
 Django >= 1.11, < 1.12
 psycopg2
--e git://github.com/golemfactory/golem-messages.git@v1.1.0#egg=golem_messages
+-e git://github.com/kbeker/golem-messages.git@f94d72024f8fc4d496978915c31256d6a45fc55f#egg=concent-messages
 freezegun
 pyyaml
