--- a/requirements-development.txt
+++ b/requirements-development.txt
@@ -7,6 +7,7 @@ pipdeptree
 flake8
 pylint-django
 requests
+mypy==0.560
 
 # Force the latest version of pylint pyflakes and pep8. There are numerous issues with older versions.
 pylint   >= 1.7.5
