--- a/requirements-development.txt
+++ b/requirements-development.txt
@@ -16,3 +16,9 @@ mypy==0.560
 pylint   >= 1.7.5, < 1.8.0
 pyflakes >= 1.6.0
 pep8     >= 1.7.1
+
+# FIXME: There's a bug in astroid that makes pylint print spurious warnings about unused __class__ variable.
+# https://github.com/PyCQA/pylint/issues/1609
+# It's fixed in pylint 1.8.1 but we can't upgrade yet because pylint-django does not work with pylint 1.8.1 yet.
+# When it's fixed, remove the line below and start requiring pylint version >= 1.8.1.
+astroid < 1.6.0
