Replace the "--extra-index-url" flag to "--find-links" flag, which fix a problem with SSL in the docker
SSL problem: The "--extra-index-url" flag cause replacing default pip
url "https://pypi.python.org/simple/" to
"http://pypi.python.org/simple/", which results response HTTP 403 "SSL
is required" from server.

--- a/concent_api/requirements.txt
+++ b/concent_api/requirements.txt
@@ -1,4 +1,4 @@
---extra-index-url=https://builds.golem.network
+--find-links https://builds.golem.network/simple/pyelliptic
 Django >= 1.11, < 1.12
 psycopg2
 -e git://github.com/golemfactory/golem-messages.git@v1.9.0#egg=golem_messages
