--- a/concent_api/requirements.txt
+++ b/concent_api/requirements.txt
@@ -3,6 +3,7 @@ assertpy
 Django >= 1.11, < 1.12
 psycopg2
 -e git://github.com/golemfactory/golem-messages.git@v2.4.0#egg=golem_messages
+-e git://github.com/golemfactory/golem-smart-contracts-interface.git@v1.0.3#egg=golem_smart_contracts_interface
 freezegun
 pyyaml
 requests
