--- a/requirements-development.txt
+++ b/requirements-development.txt
@@ -9,6 +9,7 @@ requests
 coverage
 tblib
 pytest-django
+pytest-xdist
 
 # Force the latest version of pylint pyflakes and pep8. There are numerous issues with older versions.
 pylint        >= 1.9.2
