Add pytest-cov to requirements-development.txt

--- a/requirements-development.txt
+++ b/requirements-development.txt
@@ -10,6 +10,7 @@ coverage
 tblib
 pytest-django
 pytest-xdist
+pytest-cov
 
 # Force the latest version of pylint pyflakes and pep8. There are numerous issues with older versions.
 pylint        >= 1.9.2
