--- a/signing_service/requirements.txt
+++ b/signing_service/requirements.txt
@@ -1,3 +1,6 @@
+--find-links https://builds.golem.network/simple/pyelliptic
+-e git://github.com/golemfactory/golem-messages.git@v2.10.1#egg=golem_messages
+mock
 mypy
 pytest
 pytest-django
