Update requirements-development.txt to avoiding pylint errors
New pylint version cause many errors which are not related with our
code.

--- a/requirements-development.txt
+++ b/requirements-development.txt
@@ -6,8 +6,9 @@ ipython
 pipdeptree
 flake8
 
-# Force the latest version of pylint pyflakes and pep8. There are numerous issues with older versions.
-pylint        >= 1.9.2
-pylint-django >= 0.11.1
-pyflakes      >= 2.0.0
-pep8          >= 1.7.1
+# Force the exact version of pylint pyflakes and pep8. There are numerous issues with older and newer versions.
+pylint              == 1.9.2
+pylint-django       == 0.11.1
+pylint-plugin-utils == 0.2.6
+pyflakes            <1.7.0,>=1.5.0
+pep8                >= 1.7.1
