Enable mypy more strict options and add ignore errors in test modules

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,13 @@
 [mypy]
 python_version = 3.6
+disallow_untyped_calls = True
+disallow_untyped_defs = True
 ignore_missing_imports = True
+warn_unused_ignores = True
+warn_redundant_casts = True
 
 [mypy-*/migrations/*]
+ignore_errors = True
+
+[mypy-*/tests/*]
 ignore_errors = True
