Update GolemMessages version from 2.15.0 to 2.X.0

--- a/concent_api/requirements.txt
+++ b/concent_api/requirements.txt
@@ -2,7 +2,7 @@
 assertpy
 Django >= 1.11, < 1.12
 psycopg2
--e git://github.com/golemfactory/golem-messages.git@v2.15.0#egg=golem_messages
+-e git://github.com/golemfactory/golem-messages.git@v2.15.0#egg=golem_messages #TODO: CHANGE WHEN NEW GM VERSION WILL BE TAGGED
 -e git://github.com/golemfactory/golem-smart-contracts-interface.git@v1.6.0#egg=golem_smart_contracts_interface
 freezegun
 pyyaml
