Revert "Merge branch 'feature-replace-reason-after-catching-price-not-positive-in-decorator'"
This reverts commit 4ac62e60ea242b56a286f53cc3ee100246b538ec, reversing
changes made to d40852ac49236a63a49297103537ac21d738a960.

--- a/.gitignore
+++ b/.gitignore
@@ -116,5 +116,5 @@ ENV/
 # PyCharm
 /.idea
 
-# Signing service daily thresholds
-daily_thresholds/
+# Signing service daily tresholds
+daily_tresholds/
