--- a/requirements-development.txt
+++ b/requirements-development.txt
@@ -4,11 +4,11 @@
 ipdb
 ipython
 pipdeptree
-flake8
 
 # Force the latest version of pylint pyflakes and pep8. There are numerous issues with older versions.
+flake8              == 3.5.0
 pylint              == 1.9.2
 pylint-django       == 0.11.1
 pylint-plugin-utils == 0.2.6
-pyflakes            == 2.0.0
+pyflakes            == 1.6.0
 pep8                == 1.7.1
